Spacing on the menu button, fixes BH-7

--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -242,6 +242,7 @@
 		text-decoration: none;
 		text-transform: uppercase;
 		color: $black;
+		margin-top: 1.2em;
 
 		@include break(to-mobile) {
 			height: 60px;
